CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (Anomade)

FIND_PACKAGE (Qt4 REQUIRED)

SET (QT_USE_QTWEBKIT TRUE)

AUX_SOURCE_DIRECTORY (. PROJECT_SOURCES)

SET (DISCOUNT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/discount")

# SET (DISCOUNT_SOURCES ${DISCOUNT_DIR}/*.c)
FILE (GLOB DISCOUNT_SOURCES "${DISCOUNT_DIR}/*.c")

#docheader.c dumptree.c
#           generate.c
#           markdown.c
#           mkdio.c     \
#           resource.c  \
#           version.c   \


FILE (GLOB PROJECT_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

QT4_WRAP_CPP(PROJECT_HEADERS_MOC ${PROJECT_HEADERS})

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/discount)

INCLUDE (${QT_USE_FILE})

ADD_DEFINITIONS (${QT_DEFINITIONS})

ADD_EXECUTABLE (PROJECT_NAME ${PROJECT_SOURCES} ${DISCOUNT_SOURCES} ${PROJECT_HEADERS_MOC})

TARGET_LINK_LIBRARIES (PROJECT_NAME ${QT_LIBRARIES})

